--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title></title>
 </head>
 <body>
+ 	<link rel="prerender" href="http://blueprint.cs4all.nyc/cs-concepts-and-practices">
 	<script src="jquery-3.2.1.js"></script>
 	<script src="dropdown.js"></script>
 	<script src="jsonParser.js"></script>
@@ -59,37 +60,50 @@
 		</div>
 
 	</div>
+
 	<div class="original">
 		<p class="old">Definitions:</p>
 		<div style="color: purple;" class="perinfo"></div>
-		</br>
-		</br>
 		<div style="color: #4CAF50;" class="prcinfo"></div>
-		</br>
-		</br>
 		<div style="color: hotpink;" class="coninfo"></div>
-		</br>
-		</br>
-		<a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices/" class="readMore">Read More >></a>
 	</div>
+	<!-- HOVER SIDE/INFO CONTENT -->
 	<div>
 
-		<p class="ancon" hidden="hidden"><span style="font-size: 28px">Analyze:</span></br>People of all backgrounds must evaluate and respond to the ways that computing is affecting their lives, their families and friends, and their communities. Government, industry, start-ups, non-profits, researchers, artists and many others use the principles of computing to accomplish a fast-growing number of things. Some of these things we may think of as beneficial or malicious, but others we’re still not sure how to evaluate.</p>
+		<p class="ancon" hidden="hidden">People of all backgrounds must evaluate and respond to the ways that computing is affecting their lives, their families and friends, and their communities. Government, industry, start-ups, non-profits, researchers, artists and many others use the principles of computing to accomplish a fast-growing number of things. Some of these things we may think of as beneficial or malicious, but others we’re still not sure how to evaluate.</p>
 
-		<p class="cocon" hidden="hidden"><span style="font-size: 28px">Communicate:</span></br>Postsecondary pursuits, whether it be college or career, will require students to communicate the complex thought processes behind their work with computer science. Students will work with collaborators, professors, advisors, project leaders, customers, and many others on issues or projects around computing. These people will be interested in the how and why behind students projects or thoughts.</p>
-		<p class="prcon" hidden="hidden"><span style="font-size: 28px">Prototype:</span></br>The goal of the prototyping practice is to help students build a mental model of how to use a computer to create new applications. Computer applications or programs like Word, Photoshop, or Chrome define how we use computers. When we practice prototyping computing projects, we are creating our own applications, using computers in different ways than when we fire up our word processor or web browser.</p>
+		<p class="cocon" hidden="hidden">Postsecondary pursuits, whether it be college or career, will require students to communicate the complex thought processes behind their work with computer science. Students will work with collaborators, professors, advisors, project leaders, customers, and many others on issues or projects around computing. These people will be interested in the how and why behind students projects or thoughts.</p>
+		<p class="prcon" hidden="hidden">The goal of the prototyping practice is to help students build a mental model of how to use a computer to create new applications. Computer applications or programs like Word, Photoshop, or Chrome define how we use computers. When we practice prototyping computing projects, we are creating our own applications, using computers in different ways than when we fire up our word processor or web browser.</p>
 
-		<p class="abcon" hidden="hidden"><span style="font-size: 28px">Abstractions:</span></br>An abstraction represents a simplified idea or problem derived by ignoring details and using patterns or general characteristics. A simple example of a CS abstraction is a programming language, they allow programmers to give complex instructions to computers without worrying about the bits and bytes!</p>
-		<p class="alcon" hidden="hidden"><span style="font-size: 28px">Algortihms:</span></br>Algorithms are generalized and repeatable sequence of instructions that achieve a particular purpose and output, given a set of inputs. It's important to understand when, why, and how to implement an algorithm and to consider who or what might be affected.</p>
-		<p class="pcon" hidden="hidden"><span style="font-size: 28px">Programming:</span></br>Programming is about giving instructions to computers. Programming can be done through a constantly changing set of languages and frameworks. Each language is translated from human-readable code into machine code that can be executed by the computer’s central processing unit, CPU.</p>
-		<p class="dcon" hidden="hidden"><span style="font-size: 28px">Data:</span></br>Computers can be used to collect, store, and analyze massive amounts of data quickly and reliably. Computers programs can use data to make decisions or automate tasks. </p>
-		<p class="ncon" hidden="hidden"><span style="font-size: 28px">Networks:</span></br>Networks, like the Internet, allow computers to interface with other computers through a set of rules, or protocols, that define how computers send and receive data. Protocols and standards are created and agreed upon by groups of people.</p>
+		<p class="abcon" hidden="hidden">An abstraction represents a simplified idea or problem derived by ignoring details and using patterns or general characteristics. A simple example of a CS abstraction is a programming language, they allow programmers to give complex instructions to computers without worrying about the bits and bytes!</p>
+		<p class="alcon" hidden="hidden">Algorithms are generalized and repeatable sequence of instructions that achieve a particular purpose and output, given a set of inputs. It's important to understand when, why, and how to implement an algorithm and to consider who or what might be affected.</p>
+		<p class="pcon" hidden="hidden">Programming is about giving instructions to computers. Programming can be done through a constantly changing set of languages and frameworks. Each language is translated from human-readable code into machine code that can be executed by the computer’s central processing unit, CPU.</p>
+		<p class="dcon" hidden="hidden">Computers can be used to collect, store, and analyze massive amounts of data quickly and reliably. Computers programs can use data to make decisions or automate tasks. </p>
+		<p class="ncon" hidden="hidden">Networks, like the Internet, allow computers to interface with other computers through a set of rules, or protocols, that define how computers send and receive data. Protocols and standards are created and agreed upon by groups of people.</p>
 
-		<p class="econ perspectiveinvert" hidden="hidden"><span style="font-size: 28px">Explorer:</span></br>Students begin their CS journey as Explorers playing with computing. To make CS real to them, Explorers manipulate computing applications, problems, and topics with physical or visual manifestations.</p>
-		<p class="ccon" hidden="hidden"><span style="font-size: 28px">Creator:</span></br>Students continue their CS journey as Creators expressing their ideas through computing. Intrigued by the possibilities of computing, Creators use computing to represent their ideas, thoughts, or interests.</p>
-		<p class="icon" hidden="hidden"><span style="font-size: 28px">Innovate:</span></br>Innovators engage with open-ended topics connected to the work of individuals in public, private and open-source domains of CS practice.</p>
-		<p class="zcon" hidden="hidden"><span style="font-size: 28px">Citizen:</span></br>Citizens examine and try to influence the intersection of computing with social, economic and political systems.</p>
+		<p class="econ" hidden="hidden">Students begin their CS journey as Explorers playing with computing. To make CS real to them, Explorers manipulate computing applications, problems, and topics with physical or visual manifestations.</p>
+		<p class="ccon" hidden="hidden">Students continue their CS journey as Creators expressing their ideas through computing. Intrigued by the possibilities of computing, Creators use computing to represent their ideas, thoughts, or interests.</p>
+		<p class="icon" hidden="hidden">Innovators engage with open-ended topics connected to the work of individuals in public, private and open-source domains of CS practice.</p>
+		<p class="zcon" hidden="hidden">Citizens examine and try to influence the intersection of computing with social, economic and political systems.</p>
 	</div>
-
+	<!-- STATIC SIDE/INFO CONTENT -->
+	<div>
+	<!-- MUST VERIFY THAT ANCHORS ARE PERMALINKS!! -->
+		<!-- practices -->
+		<div class="ancon2" hidden="hidden"><span style="font-size: 28px"><u>Analyze</u></span></br>People of all backgrounds must evaluate and respond to the ways that computing is affecting their lives, their families and friends, and their communities. Government, industry, start-ups, non-profits, researchers, artists and many others use the principles of computing to accomplish a fast-growing number of things. Some of these things we may think of as beneficial or malicious, but others we’re still not sure how to evaluate.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.dg39y6oosdg5" target="external" rel="prefetch" class="readMore" style="background-color:#4CAF50;">Read More >></a><br><br></div>
+		<div class="cocon2" hidden="hidden"><span style="font-size: 28px">Communicate:</span></br>Postsecondary pursuits, whether it be college or career, will require students to communicate the complex thought processes behind their work with computer science. Students will work with collaborators, professors, advisors, project leaders, customers, and many others on issues or projects around computing. These people will be interested in the how and why behind students projects or thoughts.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.bfbo91hm2b6f" target="external" class="readMore" style="background-color:#4CAF50;">Read More >></a><br><br></div>
+		<div class="prcon2" hidden="hidden"><span style="font-size: 28px">Prototype:</span></br>The goal of the prototyping practice is to help students build a mental model of how to use a computer to create new applications. Computer applications or programs like Word, Photoshop, or Chrome define how we use computers. When we practice prototyping computing projects, we are creating our own applications, using computers in different ways than when we fire up our word processor or web browser.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.r53xzt8agl47" target="external" class="readMore" style="background-color:#4CAF50;">Read More >></a><br><br></div>
+		<!-- concepts -->
+		<div class="abcon2" hidden="hidden"><span style="font-size: 28px">Abstractions:</span></br>An abstraction represents a simplified idea or problem derived by ignoring details and using patterns or general characteristics. A simple example of a CS abstraction is a programming language, they allow programmers to give complex instructions to computers without worrying about the bits and bytes!<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.qv1zpjjebiw" target="external" class="readMore" style="background-color:hotpink;">Read More >></a><br><br></div>
+		<div class="alcon2" hidden="hidden"><span style="font-size: 28px">Algortihms:</span></br>Algorithms are generalized and repeatable sequence of instructions that achieve a particular purpose and output, given a set of inputs. It's important to understand when, why, and how to implement an algorithm and to consider who or what might be affected.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.w8li5kp5t9ed" target="external" class="readMore" style="background-color:hotpink;">Read More >></a><br><br></div>
+		<div class="pcon2" hidden="hidden"><span style="font-size: 28px">Programming:</span></br>Programming is about giving instructions to computers. Programming can be done through a constantly changing set of languages and frameworks. Each language is translated from human-readable code into machine code that can be executed by the computer’s central processing unit, CPU.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.yu8mfi6crc7m" target="external" class="readMore" style="background-color:hotpink;">Read More >></a><br><br></div>
+		<div class="dcon2" hidden="hidden"><span style="font-size: 28px">Data:</span></br>Computers can be used to collect, store, and analyze massive amounts of data quickly and reliably. Computers programs can use data to make decisions or automate tasks. <br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.q42ma2xm44o3" target="external" class="readMore" style="background-color:hotpink;">Read More >></a><br><br></div>
+		<div class="ncon2" hidden="hidden"><span style="font-size: 28px">Networks:</span></br>Networks, like the Internet, allow computers to interface with other computers through a set of rules, or protocols, that define how computers send and receive data. Protocols and standards are created and agreed upon by groups of people.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.brpx0n3iepx1" target="external" class="readMore" style="background-color:hotpink;">Read More >></a><br><br></div>
+		<!-- perspectives -->
+		<div class="econ2" hidden="hidden"><span style="font-size: 28px">Explorer:</span></br>Students begin their CS journey as Explorers playing with computing. To make CS real to them, Explorers manipulate computing applications, problems, and topics with physical or visual manifestations.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.dg39y6oosdg5" target="external" class="readMore" style="background-color:purple;">Read More >></a><br><br></div>
+		<div class="ccon2" hidden="hidden"><span style="font-size: 28px">Creator:</span></br>Students continue their CS journey as Creators expressing their ideas through computing. Intrigued by the possibilities of computing, Creators use computing to represent their ideas, thoughts, or interests.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.dg39y6oosdg5" target="external" class="readMore" style="background-color:purple;">Read More >></a><br><br></div>
+		<div class="icon2" hidden="hidden"><span style="font-size: 28px">Innovate:</span></br>Innovators engage with open-ended topics connected to the work of individuals in public, private and open-source domains of CS practice.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.dg39y6oosdg5" target="external" class="readMore" style="background-color:purple;">Read More >></a><br><br></div>
+		<div class="zcon2" hidden="hidden"><span style="font-size: 28px">Citizen:</span></br>Citizens examine and try to influence the intersection of computing with social, economic and political systems.<br><a href="http://blueprint.cs4all.nyc/cs-concepts-and-practices#h.dg39y6oosdg5"target="external"  class="readMore" style="background-color:purple;">Read More >></a><br><br></div>
+	</div>
 </body>
 </html>
